--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ addons:
   apt:
     packages:
     - python-pip
-    - expect-dev
 
 install:
   - pip install ansible
@@ -26,5 +25,5 @@ install:
 
 script:
   - export PATH=$PATH:.
-  - unbuffer tests/bash_unit tests/tests_role_unit
-  - unbuffer tests/bash_unit tests/tests_role_unit_debian9
+  - tests/bash_unit tests/tests_role_unit
+  - tests/bash_unit tests/tests_role_unit_debian9
