add feature to use multiple containers

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,4 @@ script:
   - export PATH=$PATH:.
   - tests/bash_unit tests/tests_role_unit
   - tests/bash_unit tests/tests_role_unit_debian8
+  - tests/bash_unit tests/tests_role_unit_double
