--- a/.travis.yml
+++ b/.travis.yml
@@ -15,17 +15,11 @@ addons:
 install:
   - pip install ansible
   - ansible --version
-  - ansible -i localhost, -c local all -m setup
-  - docker pull multimediabs/plumb_unit:centos6
-  - docker pull multimediabs/plumb_unit:centos7
-  - docker pull multimediabs/plumb_unit:debian_jessie
-  - docker pull multimediabs/plumb_unit:debian_wheezy
-  - docker pull multimediabs/plumb_unit:debian_stretch
-  - docker pull multimediabs/plumb_unit:archlinux
 
 script:
   - export PATH=$PATH:.
-  - tests/bash_unit tests/tests_role_unit
-  - tests/bash_unit tests/tests_role_unit_debian8
-  - tests/bash_unit tests/tests_role_unit_centos7
-  - tests/bash_unit tests/tests_role_unit_double
+  - RU_ENV_IMAGE=debian7 tests/bash_unit tests/tests_role_unit
+  - RU_ENV_IMAGE=debian8 tests/bash_unit tests/tests_role_unit
+  - RU_ENV_IMAGE=debian9 tests/bash_unit tests/tests_role_unit
+  - RU_ENV_IMAGE=centos6 tests/bash_unit tests/tests_role_unit
+  - RU_ENV_IMAGE=centos7 tests/bash_unit tests/tests_role_unit
