no need for RU_ENV_IAGE setting on tests_run_the_same_twice

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ double:
 
 twice:
   script:
-    - RU_ENV_IMAGE=debian9 tests/bash_unit tests/tests_run_the_same_twice
+    - tests/bash_unit tests/tests_run_the_same_twice
   stage: testing
 
 role_init:
