--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker:latest
+image: registry.gitlab.com/n0vember/role_unit_containers:build
 
 variables:
   DOCKER_DRIVER: overlay2
@@ -11,13 +11,6 @@ stages:
   - images
   - library
   - role-init
-
-before_script:
-  - docker info
-  - apk update
-  - apk upgrade
-  - apk add bash util-linux
-  - apk add python ansible
 
 .distribution_testing: &distribution_testing_definition
   script:
